tests/suite/snapshots/suite__end_to_end__separate__final_2.snap
---
source: tests/suite/end_to_end.rs
assertion_line: 51
expression: stdout
---
1 = 1
2 = 2
3 = 3
4 = 4

