tests/suite/snapshots/suite__end_to_end__separate__out_of_order.snap
---
source: tests/suite/end_to_end.rs
assertion_line: 56
expression: stdout
---
Calling foo
Calling bar
Calling baz

