tests/suite/snapshots/suite__end_to_end__separate__shadow_class_1.snap
---
source: tests/suite/end_to_end.rs
assertion_line: 55
expression: stdout
---
5 = 5
false = false

