tests/suite/snapshots/suite__end_to_end__separate__shadow_class_2.snap
---
source: tests/suite/end_to_end.rs
assertion_line: 56
expression: stdout
---
5 = 5
false = false

